@startuml

title __CLOUD_LAB1's Class Diagram__\n

  package main.resources {
    class BCrypt {
    }
  }
  

  package main.java {
    class Dao {
    }
  }
  

  package main.java {
    class RMIClient {
    }
  }
  

  package main.java {
    class RMIServer {
    }
  }
  

  package main.java {
    interface ServerAction {
    }
  }
  

  package main.java {
    class ServerImpl {
    }
  }
  

  ServerImpl -up-|> ServerAction
  ServerImpl -up-|> UnicastRemoteObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
